--- a/src/Mahjong.Web.Mvc/appsettings.json
+++ b/src/Mahjong.Web.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=47.75.66.224\\sqlexpress;Database=Mahjong;User Id=sa;Password=wang123!!@@"
+    "Default": "Server=mjms.database.windows.net;Database=mjms;User Id=mjmsAdmin@mjms;Password='#KEAZz4c6n$;]APL4P<4'"
   },
   "Authentication": {
     "JwtBearer": {
