--- a/src/Mahjong.Web.Mvc/compilerconfig.json
+++ b/src/Mahjong.Web.Mvc/compilerconfig.json
@@ -1,14 +1,17 @@
-﻿[
+[
   {
     "outputFile": "wwwroot/view-resources/Views/Account/_Layout.css",
-    "inputFile": "wwwroot/view-resources/Views/Account/_Layout.scss"
+    "inputFile": "wwwroot/view-resources/Views/Account/_Layout.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "wwwroot/view-resources/Views/Shared/_Layout.css",
-    "inputFile": "wwwroot/view-resources/Views/Shared/_Layout.scss"
+    "inputFile": "wwwroot/view-resources/Views/Shared/_Layout.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "wwwroot/css/style.css",
-    "inputFile": "wwwroot/scss/style.scss"
+    "inputFile": "wwwroot/scss/style.scss",
+    "sourceMap": false
   }
 ]
